# CareAgent

./: 老年陪伴Agent (1)(1).pptx  老年陪伴Agent .pptx
elder-care-agent/: .dockerignore  .env.example  (+7 more)
elder-care-agent/apps/api-server/: alembic.ini  pyproject.toml
elder-care-agent/apps/api-server/alembic/: env.py
elder-care-agent/apps/api-server/alembic/versions/: 202603310001_init.py
elder-care-agent/apps/api-server/eldercare_api/: auth.py  config.py  database.py  deps.py  main.py  models.py  scheduler.py  schemas.py
elder-care-agent/apps/api-server/eldercare_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
elder-care-agent/apps/api-server/eldercare_api/repositories/: alert_repository.py  cognition_repository.py  conversation_repository.py  medication_repository.py  message_repository.py  notice_repository.py  prescription_repository.py  profile_repository.py
elder-care-agent/apps/api-server/eldercare_api/routers/: elder.py  family.py  internal.py
elder-care-agent/apps/api-server/eldercare_api/scripts/: seed.py
elder-care-agent/apps/api-server/tests/: conftest.py  test_cognition_schedule.py  test_demo_reset_flow.py  test_elder_chat_flow.py  test_elder_intent_context.py  test_elder_relay_message_flow.py  test_family_notice_flow.py  test_medication_confirmation_flow.py  test_medication_schedule_flow.py  test_prescription_flow.py
elder-care-agent/apps/mcp-server/: pyproject.toml
elder-care-agent/apps/mcp-server/eldercare_mcp/: main.py
elder-care-agent/apps/mcp-server/eldercare_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+33 files in other folders)
